# NorthernLights

./: .clang-format  .gitignore  CMakeLists.txt  README.md
config/: regime_profiles.toml  risk.cfg  routes.json  strategy.cfg
config/templates/: mean_revert.cfg  momentum_scalp.toml  regime_adaptive.toml
data/csv/: BTCUSD_historical_data.csv  XAUUSD_historical_data.csv
include/data/: alt_data.hpp  features.hpp  market_data.hpp
include/execution/: order_router.hpp  position_sizer.hpp  trade_executor.hpp
include/infra/: orchestrator.hpp  rest_server.hpp  scheduler.hpp
include/strategy/: regime_switcher.hpp
include/utils/: config.hpp  logger.hpp
scripts/: bootstrap.sh
src/: main.cpp
src/data/: alt_data.cpp  features.cpp  market_data.cpp
src/execution/: order_router.cpp  position_sizer.cpp  trade_executor.cpp
src/infra/: orchestrator.cpp  rest_server.cpp  scheduler.cpp
src/strategy/: regime_switcher.cpp
src/utils/: config.cpp  logger.cpp
tests/: test_alt_data.cpp  test_config.cpp  test_logger.cpp  test_market_data.cpp  test_order_router.cpp  test_position_sizer.cpp  test_regime_switcher.cpp  test_signal.cpp
